frontend: fix spacing in search words

--- a/backend/frontend/src/components/Navigator/Search.css
+++ b/backend/frontend/src/components/Navigator/Search.css
@@ -27,7 +27,3 @@
     white-space: pre-wrap;
     content: " ";
 }
-
-.search .results .result span:first-child::after {
-    content: none;
-}
